<resources>
    <string name="app_name">WhiteBoard</string>
    <string name="action_settings">Settings</string>
    <string name="color_choices">Color Choices</string>
    <string name="background_choices">Background Color</string>
    <string name="background_red">Red</string>
    <string name="background_green">Green</string>
    <string name="background_blue">Blue</string>
    <string name="background_white">White</string>
    <string name="background_black">Black</string>
    <string name="settings_label">Whiteboard Settings</string>
    <string name="exit_button">Go Back</string>
    <string name="barSaveButton">Save Drawing</string>
    <string name="clear_button">Clear Whiteboard</string>
    <string name="save_button">Save Whiteboard</string>
</resources>
